--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h6 class="title">SSE server at port 5005</h6>
     <div class="container">
       <div id="Total" class="channel">
-        <div class="name">Total</div>
+        <div class="name">Total:</div>
         <div class="events">0</div>
         <button class="delete" onclick="clearAll()">Clear All</button>
       </div>
@@ -28,27 +28,32 @@
         <label for="autroprime" class="radio">AutroPrime</label>
       </div>
       <div id="Alarms" class="channel">
-        <div class="name">Alarm</div>
+        <div class="name">Alarm:</div>
         <div class="events">0</div>
         <button class="alarm" onclick="addEvents(1, 'Alarm')">+ 1</button>
         <button class="alarm" onclick="addEvents(100, 'Alarm')">+ 100</button>
         <button class="alarm" onclick="addEvents(1000, 'Alarm')">+ 1000</button>
       </div>
       <div id="Faults" class="channel">
-        <div class="name">Fault</div>
+        <div class="name">Fault:</div>
         <div class="events">0</div>
         <button class="fault" onclick="addEvents(1, 'Fault')">+ 1</button>
         <button class="fault" onclick="addEvents(100, 'Fault')">+ 100</button>
         <button class="fault" onclick="addEvents(1000, 'Fault')">+ 1000</button>
       </div>
       <div id="Unknows" class="channel">
-        <div class="name">Unknow</div>
+        <div class="name">Unknow:</div>
         <div class="events">0</div>
         <button class="unknow" onclick="addEvents(1, 'Unknow')">+ 1</button>
         <button class="unknow" onclick="addEvents(100, 'Unknow')">+ 100</button>
         <button class="unknow" onclick="addEvents(1000, 'Unknow')">
           + 1000
         </button>
+      </div>
+      <div id="Clients" class="info">
+        <div class="t2">Connected Clients:</div>
+        <div id="num" class="number">0</div>
+        <button class="getinfo" onclick="getClientsInfo()">Get Info</button>
       </div>
     </div>
 
@@ -102,6 +107,18 @@
           const response = await fetch('events/length');
           const { total, alarm, fault, unknow } = await response.json();
           setEventsNumber(total, alarm, fault, unknow);
+        } catch (err) {
+          console.log(err);
+        }
+      }
+
+      async function getClientsInfo() {
+        try {
+          const response = await fetch('clients');
+          const results = await response.json();
+          //get children by parent id + child id
+          document.querySelector(`#Clients`).querySelector(`#num`).innerHTML =
+            results.length;
         } catch (err) {
           console.log(err);
         }
