--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>SSE server</title>
   </head>
   <body>
-    <h6 class="title">SSE server at port 5005</h6>
+    <h6 class="title">SSE server at port 5000</h6>
     <div class="container">
       <div id="Total" class="channel">
         <div class="name">Total:</div>
@@ -33,23 +33,23 @@
       <div id="Alarms" class="channel">
         <div class="name">Alarm:</div>
         <div class="events">0</div>
-        <button class="alarm" onclick="addEvents(1, 'Alarm')">+ 1</button>
-        <button class="alarm" onclick="addEvents(100, 'Alarm')">+ 100</button>
-        <button class="alarm" onclick="addEvents(1000, 'Alarm')">+ 1000</button>
+        <button class="alarm" onclick="addEvents(1, 'alarm')">+ 1</button>
+        <button class="alarm" onclick="addEvents(100, 'alarm')">+ 100</button>
+        <button class="alarm" onclick="addEvents(1000, 'alarm')">+ 1000</button>
       </div>
       <div id="Faults" class="channel">
         <div class="name">Fault:</div>
         <div class="events">0</div>
-        <button class="fault" onclick="addEvents(1, 'Fault')">+ 1</button>
-        <button class="fault" onclick="addEvents(100, 'Fault')">+ 100</button>
-        <button class="fault" onclick="addEvents(1000, 'Fault')">+ 1000</button>
+        <button class="fault" onclick="addEvents(1, 'fault')">+ 1</button>
+        <button class="fault" onclick="addEvents(100, 'fault')">+ 100</button>
+        <button class="fault" onclick="addEvents(1000, 'fault')">+ 1000</button>
       </div>
       <div id="Unknows" class="channel">
         <div class="name">Unknow:</div>
         <div class="events">0</div>
-        <button class="unknow" onclick="addEvents(1, 'Unknow')">+ 1</button>
-        <button class="unknow" onclick="addEvents(100, 'Unknow')">+ 100</button>
-        <button class="unknow" onclick="addEvents(1000, 'Unknow')">
+        <button class="unknow" onclick="addEvents(1, 'unknow')">+ 1</button>
+        <button class="unknow" onclick="addEvents(100, 'unknow')">+ 100</button>
+        <button class="unknow" onclick="addEvents(1000, 'unknow')">
           + 1000
         </button>
       </div>
