--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
         <input type="radio" id="autroprime" name="system" value="AutroPrime" />
         <label for="autroprime" class="radio">AutroPrime</label>
       </div>
-      <div id="Alarms" class="channel">
+      <div id="alarms" class="channel">
         <div class="name">Alarm:</div>
         <div class="events">0</div>
         <button class="alarm" onclick="addEvents(1, 'alarm')">+ 1</button>
         <button class="alarm" onclick="addEvents(100, 'alarm')">+ 100</button>
         <button class="alarm" onclick="addEvents(1000, 'alarm')">+ 1000</button>
       </div>
-      <div id="Faults" class="channel">
+      <div id="faults" class="channel">
         <div class="name">Fault:</div>
         <div class="events">0</div>
         <button class="fault" onclick="addEvents(1, 'fault')">+ 1</button>
         <button class="fault" onclick="addEvents(100, 'fault')">+ 100</button>
         <button class="fault" onclick="addEvents(1000, 'fault')">+ 1000</button>
       </div>
-      <div id="Unknows" class="channel">
+      <div id="unknows" class="channel">
         <div class="name">Unknow:</div>
         <div class="events">0</div>
         <button class="unknow" onclick="addEvents(1, 'unknow')">+ 1</button>
