some css changes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <button class="fault" onclick="addEvents(1000, 'fault')">+ 1000</button>
       </div>
       <div id="unknows" class="channel">
-        <div class="name">Unknow:</div>
+        <div class="name">Unknown:</div>
         <div class="events">0</div>
         <button class="unknow" onclick="addEvents(1, 'unknow')">+ 1</button>
         <button class="unknow" onclick="addEvents(100, 'unknow')">+ 100</button>
